--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -81,13 +81,12 @@ jobs:
     - name: Install dependencies
       run: |
         npm install -g fleetctl
-        brew install jq
     - name: Make package
       run: |
         hostname
         fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
         fleetctl login
-        SECRET=$(fleetctl get enroll_secret --json | jq '.spec.secrets[0].secret')
+        SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
         echo $SECRET
         fleetctl package --type pkg --fleet-url=https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt --enroll-secret=$SECRET
         sudo installer -pkg fleet-osquery.pkg -target /
