--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,17 +13,21 @@ env:
   PASSWORD: admin123#
 
 jobs:
-  gen-hostname:
+  gen:
     runs-on: ubuntu-latest
     outputs:
-      uuid: ${{ steps.gen.outputs.uuid }}
+      subdomain: ${{ steps.gen.outputs.subdomain }}
+      address: ${{ steps.gen.outputs.address }}
     steps:
     - id: gen
-      run: echo "::set-output name=uuid::$(uuidgen)"
+      run: |
+        UUID=$(uuidgen)
+        echo "::set-output name=subdomain::fleet-preview-$UUID"
+        echo "::set-output name=address::https://fleet-preview-$UUID.loca.lt"
   
-  echo-hostname:
+  run-server:
     runs-on: ubuntu-latest
-    needs: gen-hostname
+    needs: gen
     steps:
     # Download fleet and fleetctl binaries from last successful build on main
     - name: Download binaries
@@ -38,20 +42,20 @@ jobs:
     - name: Start tunnel
       run: |
         npm install -g localtunnel
-        lt --port 1337 --subdomain fleet-preview-${{ needs.gen-hostname.outputs.uuid }} &
+        lt --port 1337 --subdomain ${{ needs.gen.outputs.subdomain }} &
 
     - name: Start Fleet server
       timeout-minutes: 15
       run: |
         chmod +x ./build/fleetctl
         ./build/fleetctl preview --no-hosts
-        ./build/fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
+        ./build/fleetctl config set --address ${{ needs.gen.outputs.address }}
         ./build/fleetctl get enroll-secret
         sleep 3600
 
   wait-server:
    runs-on: ubuntu-latest
-   needs: gen-hostname
+   needs: gen
    steps:
         # Download fleet and fleetctl binaries from last successful build on main
     - name: Download binaries
@@ -67,7 +71,7 @@ jobs:
       timeout-minutes: 5
       run: |
         chmod +x ./build/fleetctl
-        ./build/fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
+        ./build/fleetctl config set --address ${{ needs.gen.outputs.address }}
         until ./build/fleetctl login
         do
           echo "Retrying in 5s..."
@@ -76,21 +80,21 @@ jobs:
       
   macos-job:
     runs-on: macos-latest
-    needs: [gen-hostname, wait-server]
+    needs: [gen, wait-server]
     steps:
     - name: Install dependencies
       run: |
         npm install -g fleetctl
     - name: Make package
       run: |
-        hostname
-        fleetctl config set --address https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt
+        fleetctl config set --address ${{ needs.gen.outputs.address }}
         fleetctl login
         SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
-        echo $SECRET
-        fleetctl package --type pkg --fleet-url=https://fleet-preview-${{ needs.gen-hostname.outputs.uuid }}.loca.lt --enroll-secret=$SECRET
+        echo "Secret: $SECRET"
+        echo "Hostname: $(hostname -s)"
+        fleetctl package --type pkg --fleet-url=${{ needs.gen.outputs.address }} --enroll-secret=$SECRET
         sudo installer -pkg fleet-osquery.pkg -target /
-        until fleetctl get hosts | grep $(hostname -s);
+        until fleetctl get hosts | grep -iF $(hostname -s);
         do
           echo "Awaiting enrollment..."
           sleep 1
