--- a/cmd/fleetctl/testdata/expectedHostDetailResponseYaml.yml
+++ b/cmd/fleetctl/testdata/expectedHostDetailResponseYaml.yml
@@ -63,6 +63,7 @@ spec:
       created_at: "0001-01-01T00:00:00Z"
       updated_at: "0001-01-01T00:00:00Z"
   policy_updated_at: "0001-01-01T00:00:00Z"
+  public_ip: ""
   primary_ip: ""
   primary_mac: ""
   refetch_requested: false
