--- a/cmd/fleetctl/testdata/expectedListHostsYaml.yml
+++ b/cmd/fleetctl/testdata/expectedListHostsYaml.yml
@@ -40,6 +40,7 @@ spec:
   platform: ""
   platform_like: ""
   policy_updated_at: "0001-01-01T00:00:00Z"
+  public_ip: ""
   primary_ip: ""
   primary_mac: ""
   refetch_requested: false
@@ -88,6 +89,7 @@ spec:
   platform: ""
   platform_like: ""
   policy_updated_at: "0001-01-01T00:00:00Z"
+  public_ip: ""
   primary_ip: ""
   primary_mac: ""
   refetch_requested: false
