--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,6 +21,10 @@ on:
       - '**.tsx'
   schedule:
     - cron: '18 17 * * 1'
+      
+permissions:
+    actions: read
+    contents: read
 
 jobs:
   analyze:
