--- a/.github/workflows/deploy-fleet-website.yml
+++ b/.github/workflows/deploy-fleet-website.yml
@@ -8,8 +8,13 @@ on:
       - 'docs/**'
       - 'handbook/**'
       
+permissions:
+  contents: read
+
 jobs:
   build:
+    permissions:
+      contents: write  # for Git to git push website
     if: ${{ github.repository == 'fleetdm/fleet' }}
 
     runs-on: ubuntu-latest
