Add GitHub projects to link check ignorePatterns

--- a/.github/workflows/markdown-link-check-config.json
+++ b/.github/workflows/markdown-link-check-config.json
@@ -41,6 +41,9 @@
     },
     {
       "pattern": "angel.co"
+    },
+    {
+      "pattern": "github.com/orgs/fleetdm/projects"
     }
   ],
   "retryOn429": true,
