--- a/.github/workflows/generate-desktop-app-tar-gz.yml
+++ b/.github/workflows/generate-desktop-app-tar-gz.yml
@@ -52,6 +52,7 @@ jobs:
           AC_USERNAME=$AC_USERNAME \
           AC_PASSWORD=$AC_PASSWORD \
           FLEET_DESKTOP_APPLE_AUTHORITY=$CODESIGN_IDENTITY \
+          FLEET_DESKTOP_NOTARIZE=true \
           FLEET_DESKTOP_VERSION=$FLEET_DESKTOP_VERSION \
           make desktop-app-tar-gz
 
